<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainFragment">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/book_logo_image" />

        <Button
            android:id="@+id/btn_all_books"
            style="@style/button_style"
            android:layout_marginTop="20dp"
            android:text="@string/all_books"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btn_fav_books"
            style="@style/button_style"
            android:layout_marginTop="20dp"
            android:text="@string/favourite_books" />

        <Button
            android:id="@+id/btn_read_books"
            style="@style/button_style"
            android:text="@string/already_read_books" />

        <Button
            android:id="@+id/btn_add_book"
            style="@style/button_style"
            android:text="@string/add_book" />
    </LinearLayout>
</layout>